CHANGES IN VERSION 1.7.1
------------------------
 o bug fixed of enrich.internal, drop those genes that without annotation when calculating sample gene number. <2013-05-02, Thu>
 o change some code to satisfy ReactomePA <2013-03-27, Wed>

CHANGES IN VERSION 1.5.1
------------------------
 o bug fixed in enrich.internal, now return NA rather than throw error, if gene have no ontology annotation <2013-01-22, Fri>

CHANGES IN VERSION 1.3.2
------------------------
 o update codes of plot functions accompaning with ggplot2 (version 0.9.2) <2012-09-06, Thu> 
 o update cnetplot corresponding to igraph version 0.6 <2012-07-11, Wed>
 o parameter showCategory now support term ID vector <2012-07-11, Wed>
 o import termSim and combineScores from GOSemSim. <2012-06,14, Thu>
 o optimize setReadable <2012-05-09, Wed>
 o bug fixed of setReadable method. For those unmapped genes, return the original gene ID. <2012-05-15, Tue>
 o fill color in barplot for Ontology classification. <2012-05-22, Tue>
 o update color scale of cnetplot <2012-06-18, Mon>
  
CHANGES IN VERSION 1.3.1
------------------------
 o update color scheme of cnetplot <2012-04-10, Tue>
 o add simplot for plotting semantic similarity matrix <2012-04-20, Fri>
 o bug fixed of combineScore function for DO semantic similarity matrix
   which containing NA rows of NA coloumns <2012-04-20, Fri>
 o export doSim and geneSim functions <2012-04-20, Fri>

CHANGES IN VERSION 1.1.12
------------------------
 o implement barplot for enrichResult <2012-03-18, Sun>
 o bug fixed for setReadable method <2012-03-19, Mon>
 o add logFC parameter for cnet plot, support color gene nodes by
   their expression value (log fold change) <2012-03-21, Wed>
 o add mapping entrezgene ID and gene Name for organisms
   other than human, mouse and yeast. <2012-03-22, Thu>
 o bug fixed for attempt to name logFC, when it is NULL. <2012-03-22, Thu>
 o optimized readable method. <2012-03-26, Mon>

CHANGES IN VERSION 1.1.11
------------------------